US74986: Shrink right margin (before labels) to ensure alignment of paragraph labels with larger checkbox size. Update icon SVG after build.

--- a/checkbox-radio.scss
+++ b/checkbox-radio.scss
@@ -13,7 +13,7 @@
 
 	& > input[type="#{$type}"] {
 		margin-top: -0.2rem;
-		margin-right: 0.6rem;
+		margin-right: 0.5rem;
 		margin-left: -1.7rem;
 	}
 
@@ -21,13 +21,13 @@
 		padding-right: 1.7rem;
 		padding-left: $padding-right;
 		& > input[type="#{$type}"] {
-			margin-left: 0.6rem;
+			margin-left: 0.5rem;
 			margin-right: -1.7rem;
 		}
 	}
 
 	&:last-of-type {
-		margin-bottom: 0.4rem;
+		margin-bottom: 0.5rem;
 	}
 
 }
